--- a/Models/Rating_Models.ipynb
+++ b/Models/Rating_Models.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Review</th>\n      <th>Rating</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>nice hotel expensive parking got good deal sta...</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>ok nothing special charge diamond member hilto...</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>nice rooms not 4* experience hotel monaco seat...</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <td>3</td>\n      <td>unique, great stay, wonderful time hotel monac...</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <td>4</td>\n      <td>great stay great stay, went seahawk game aweso...</td>\n      <td>5</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 34
+     "execution_count": 4
     }
    ],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,46 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'model' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-39-91b306d52290>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mgrid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msolver\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msolvers\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpenalty\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpenalty\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mC\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mc_values\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mcv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRepeatedStratifiedKFold\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_splits\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_repeats\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mgrid_search\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGridSearchCV\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mestimator\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparam_grid\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgrid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_jobs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscoring\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'accuracy'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0merror_score\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mgrid_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgrid_search\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# summarize results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
-    "logreg = LogisticRegression()\n",
-    "solvers = ['newton-cg', 'lbfgs', 'liblinear']\n",
-    "penalty = ['l2']\n",
-    "c_values = [100, 10, 1.0, 0.1, 0.01]\n",
-    "# define grid search\n",
-    "grid = dict(solver=solvers,penalty=penalty,C=c_values)\n",
-    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
-    "grid_search = GridSearchCV(estimator=logreg, param_grid=grid, n_jobs=-1, cv=cv, scoring='accuracy',error_score=0)\n",
-    "grid_result = grid_search.fit(X_train, y_train)\n",
-    "# summarize results\n",
-    "print(\"Best: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))\n",
-    "means = grid_result.cv_results_['mean_test_score']\n",
-    "stds = grid_result.cv_results_['std_test_score']\n",
-    "params = grid_result.cv_results_['params']\n",
-    "for mean, stdev, param in zip(means, stds, params):\n",
-    "    print(\"%f (%f) with: %r\" % (mean, stdev, param))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +159,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 8
     }
    ],
    "source": [
@@ -209,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,22 +179,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([[ 176,   69,   11,    6,    2],\n",
-       "       [  78,  115,   79,   15,   11],\n",
-       "       [  16,   70,  124,   95,   20],\n",
-       "       [  18,   70,  196,  630,  373],\n",
-       "       [  16,   30,   74,  482, 1527]])"
+       "array([[ 176,   65,   11,    3,    2],\n",
+       "       [  76,  113,   81,   26,    8],\n",
+       "       [  26,   93,  117,   98,   22],\n",
+       "       [  22,   68,  177,  621,  394],\n",
+       "       [  18,   28,   68,  512, 1465]])"
       ]
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 10
     }
    ],
    "source": [
@@ -245,25 +206,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Accuracy of Random Forest Classifier: 0.5977225191726703\n              precision    recall  f1-score   support\n\n           1       0.58      0.67      0.62       264\n           2       0.32      0.39      0.35       298\n           3       0.26      0.38      0.31       325\n           4       0.51      0.49      0.50      1287\n           5       0.79      0.72      0.75      2129\n\n    accuracy                           0.60      4303\n   macro avg       0.49      0.53      0.51      4303\nweighted avg       0.62      0.60      0.61      4303\n\n"
+      "Accuracy of Random Forest Classifier: 0.5808857808857809\n              precision    recall  f1-score   support\n\n           1       0.55      0.68      0.61       257\n           2       0.31      0.37      0.34       304\n           3       0.26      0.33      0.29       356\n           4       0.49      0.48      0.49      1282\n           5       0.77      0.70      0.74      2091\n\n    accuracy                           0.58      4290\n   macro avg       0.48      0.51      0.49      4290\nweighted avg       0.60      0.58      0.59      4290\n\n"
      ]
     }
    ],
    "source": [
+    "from sklearn.metrics import accuracy_score\n",
     "print(\"Accuracy of Random Forest Classifier:\",accuracy_score(y_test, predict_lr))\n",
     "print(classification_report(predict_lr,y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +246,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 14
     }
    ],
    "source": [
@@ -293,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,22 +264,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([[  94,   28,    3,    0,    0],\n",
-       "       [ 115,   94,   28,    4,    1],\n",
-       "       [   6,   11,    6,    1,    2],\n",
-       "       [  64,  188,  361,  646,  278],\n",
-       "       [  25,   33,   86,  577, 1652]])"
+       "array([[  84,   21,    2,    1,    1],\n",
+       "       [ 125,  101,   31,    9,    2],\n",
+       "       [  14,   23,    8,    1,    1],\n",
+       "       [  73,  178,  327,  627,  269],\n",
+       "       [  22,   44,   86,  622, 1618]])"
       ]
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 16
     }
    ],
    "source": [
@@ -328,14 +290,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Accuracy of Random Forest Classifier: 0.5791308389495701\n              precision    recall  f1-score   support\n\n           1       0.31      0.75      0.44       125\n           2       0.27      0.39      0.32       242\n           3       0.01      0.23      0.02        26\n           4       0.53      0.42      0.47      1537\n           5       0.85      0.70      0.77      2373\n\n    accuracy                           0.58      4303\n   macro avg       0.39      0.50      0.40      4303\nweighted avg       0.68      0.58      0.62      4303\n\n"
+      "Accuracy of Random Forest Classifier: 0.5682983682983683\n              precision    recall  f1-score   support\n\n           1       0.26      0.77      0.39       109\n           2       0.28      0.38      0.32       268\n           3       0.02      0.17      0.03        47\n           4       0.50      0.43      0.46      1474\n           5       0.86      0.68      0.76      2392\n\n    accuracy                           0.57      4290\n   macro avg       0.38      0.48      0.39      4290\nweighted avg       0.67      0.57      0.61      4290\n\n"
      ]
     }
    ],
@@ -346,14 +308,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Accuracy of Random Forest Classifier: 0.4963978619567743\n              precision    recall  f1-score   support\n\n           1       0.21      0.73      0.33        88\n           2       0.05      0.35      0.09        52\n           3       0.01      0.19      0.02        26\n           4       0.22      0.37      0.28       719\n           5       0.92      0.52      0.67      3418\n\n    accuracy                           0.50      4303\n   macro avg       0.28      0.43      0.28      4303\nweighted avg       0.77      0.50      0.58      4303\n\n"
+      "Accuracy of Random Forest Classifier: 0.4801864801864802\n              precision    recall  f1-score   support\n\n           1       0.14      0.72      0.24        64\n           2       0.04      0.28      0.08        58\n           3       0.00      0.11      0.01        18\n           4       0.20      0.37      0.26       691\n           5       0.92      0.50      0.65      3459\n\n    accuracy                           0.48      4290\n   macro avg       0.26      0.40      0.25      4290\nweighted avg       0.78      0.48      0.57      4290\n\n"
      ]
     }
    ],
@@ -370,10 +332,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Requirement already satisfied: torch in /Users/sanyas/opt/anaconda3/lib/python3.8/site-packages (1.7.1)\n",
+      "Requirement already satisfied: numpy in /Users/sanyas/opt/anaconda3/lib/python3.8/site-packages (from torch) (1.18.5)\n",
+      "Requirement already satisfied: typing-extensions in /Users/sanyas/opt/anaconda3/lib/python3.8/site-packages (from torch) (3.7.4.2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install torch"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch.nn as nn\n",
+    "\n",
+    "class classifier(nn.Module):\n",
+    "    \n",
+    "    #define all the layers used in model\n",
+    "    def __init__(self, vocab_size, embedding_dim, hidden_dim, output_dim, n_layers, \n",
+    "                 bidirectional, dropout):\n",
+    "        \n",
+    "        #Constructor\n",
+    "        super().__init__()          \n",
+    "        \n",
+    "        #embedding layer\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        \n",
+    "        #lstm layer\n",
+    "        self.lstm = nn.LSTM(embedding_dim, \n",
+    "                           hidden_dim, \n",
+    "                           num_layers=n_layers, \n",
+    "                           bidirectional=bidirectional, \n",
+    "                           dropout=dropout,\n",
+    "                           batch_first=True)\n",
+    "        \n",
+    "        #dense layer\n",
+    "        self.fc = nn.Linear(hidden_dim * 2, output_dim)\n",
+    "        \n",
+    "        #activation function\n",
+    "        self.act = nn.Sigmoid()\n",
+    "        \n",
+    "    def forward(self, text, text_lengths):\n",
+    "        \n",
+    "        #text = [batch size,sent_length]\n",
+    "        embedded = self.embedding(text)\n",
+    "        #embedded = [batch size, sent_len, emb dim]\n",
+    "      \n",
+    "        #packed sequence\n",
+    "        packed_embedded = nn.utils.rnn.pack_padded_sequence(embedded, text_lengths,batch_first=True)\n",
+    "        \n",
+    "        packed_output, (hidden, cell) = self.lstm(packed_embedded)\n",
+    "        #hidden = [batch size, num layers * num directions,hid dim]\n",
+    "        #cell = [batch size, num layers * num directions,hid dim]\n",
+    "        \n",
+    "        #concat the final forward and backward hidden state\n",
+    "        hidden = torch.cat((hidden[-2,:,:], hidden[-1,:,:]), dim = 1)\n",
+    "                \n",
+    "        #hidden = [batch size, hid dim * num directions]\n",
+    "        dense_outputs=self.fc(hidden)\n",
+    "\n",
+    "        #Final activation function\n",
+    "        outputs=self.act(dense_outputs)\n",
+    "        \n",
+    "        return outputs"
+   ]
   }
  ]
 }
